cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_206.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:129: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64ede.c:129:17: Write of unused value
127.                   l2c(v1, iv);
128.                   l2c(d0, iv);
129.                   l2c(d1, iv);
                       ^
130.                   /* shift ovec left most of the bits... */
131.                   memmove(ovec, ovec + num / 8, 8 + (num % 8 ? 1 : 0));
